# simple-csv-reader

./: CMakeLists.txt  README.md
src/: csvMapClass.cpp  csvMapClass.h  file.csv  main  main.cpp
